--- a/page-tawat/package.json
+++ b/page-tawat/package.json
@@ -17,7 +17,8 @@
     "popper.js": "^1.16.1",
     "quasar": "^2.17.0",
     "vue": "^3.5.11",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
